@@ -1,0 +1,20 @@
+echo "FFMpeg decoder plugin (decodes wma and others):"
+if test  x$have_ffmpeg = xyes; then
+        echo "                                       yes"
+else
+        echo "                                        no"
+if test "$ac_cv_use_ffmpeg" = "yes"; then
+	if test "$ffmpeg_compiles" = "yes"; then
+		echo "    You are missing the ffmpeg libraries."
+		echo "    Make sure ffmpeg has been configured as a"
+		echo "    shared library (which is not the default)."
+	else
+		echo "    You are missing the ffmpeg headers and libraries"
+		echo "    version 0.4.9 or higher."
+	fi
+	echo "    The ffmpeg audio decoding plugin (decodes wma and"
+	echo "    others) won't be compiled."
+fi
+fi
+
+echo ""
